--- a/angular-project-2/src/app/app.component.html
+++ b/angular-project-2/src/app/app.component.html
@@ -1,8 +1,21 @@
+<nav>
+    <a routerLink="/">
+      <img src="media/04.png" class="icon" />
+    </a>
+    <a routerLink="/Movies">
+      <img src="media/03.png" class="icon" />
+    </a>
+    <a routerLink="/Series">
+      <img src="media/02.png" class="icon" />
+    </a>
+  </nav>
+
 <section>
     <header>
         <h1>Media Watch List</h1>
         <p class="description"> Keeping track of media I want to watch.</p>
     </header>
-    <mw-media-item-component (delete)="onMediatItemDelete($event)"  [mediaItem]="firstMediaItem "></mw-media-item-component>
+    <!-- <mw-media-item-component (delete)="onMediatItemDelete($event)"  [mediaItem]="firstMediaItem "></mw-media-item-component> -->
+    <app-media-item-list></app-media-item-list>
    
 </section>
