Forms component was generated

--- a/angular-project-2/src/app/media-item-component/media-item-component.component.css
+++ b/angular-project-2/src/app/media-item-component/media-item-component.component.css
@@ -27,7 +27,7 @@ h2 {
 .tools {
   margin-top: 8px;
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 .favorite {
