--- a/angular-project-2/src/app/media-item-list/media-item-list.component.html
+++ b/angular-project-2/src/app/media-item-list/media-item-list.component.html
@@ -2,8 +2,10 @@
     <header>
         <div>{{mediaItems | categoryList}}</div>
     </header>
-    <mw-media-item-component [ngClass] ="{'medium-movies':mediaItem.medium === 'Movies' ,'medium-series': mediaItem.medium === 'Series'}"
+    <mw-media-item-component 
+    [ngClass] ="{'medium-movies':mediaItem.medium === 'Movies' ,'medium-series': mediaItem.medium === 'Series'}"
     *ngFor="let mediaItem of mediaItems"
     [mediaItem]="mediaItem"
-    (delete)="onMediaItemDelete($event)"></mw-media-item-component>
+    (delete)="onMediaItemDelete($event)">
+</mw-media-item-component>
 </section>
